# cs107-FinalProject

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  travis_ci_test.py
.github/workflows/: ci.yml  workflow.yml
docs/: README.md  documentation.md  milestone1.md  milestone2_progress.md
src/: ReverseMode.py  Variable.py  code.py  elementary_function.py  elementary_functions.py  forward.py  variable.py
src/PyAD/: elementary_functions.py  forward.py  variable.py
src/pyadbcxy/: __init__.py  elementary_functions.py  forward.py  reverse.py  variable.py
tests/: .travis.yml  run_tests.sh  test_elementary_functions.py  test_forward.py  test_impulse.py  test_reverse.py  test_revmod.py  test_variable.py  variable_test.py
