[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "wheel",
    "setuptools>=42",
    "numpy==1.17.3; python_version=='3.8'"
]
build-backend = "setuptools.build_meta"

[project]
name = "PyAD"
liscense = {file = "LICENSE"}

requires-python = ">=3.8"
dependencies = [
    "numpy>=1.17.3"
]
readme = "README.md"