[metadata]
name = PyAD
version = 0.0.1
author = Xiang Bai, Charlie Harrington, Yaxin Lei, Bowen Zhu
description = An automatic differentiation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-BCXY/cs107-FinalProject
project_urls =
    Bug Tracker = https://github.com/cs107-BCXY/cs107-FinalProject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src